@@ -87,7 +87,7 @@ Adapter classes
   CONTAINER_SBOM_PRESENT
   CONTAINER_SBOM_INVALID
 - Route strictness:
-  explicit `--adapter container` fails closed when OCI `oci-layout` metadata is invalid, when OCI `index.json` is invalid, has non-array `manifests`, or has empty manifests, when OCI manifests exist but blob evidence is missing, when SBOM-named inputs are invalid JSON or have empty package/component evidence, and when explicit tar/compose inputs do not contain container/compose evidence. Compose strict mode now requires a `services` block with at least one service entry and at least one `image`/`build` hint inside a service block (out-of-service `image` hints do not satisfy strict routing). Explicit tar route accepts Docker-style tar markers (`manifest.json` + `repositories`) or OCI tar markers (`oci-layout` + `index.json` + `blobs/sha256/*`) and fails closed otherwise, including partial tar metadata; Docker tar strict mode additionally requires valid `manifest.json` + `repositories` JSON structure (including at least one repo/tag mapping), at least one `layer.tar` entry with manifest layer-reference resolution evidence, and manifest config-reference resolution evidence.
+  explicit `--adapter container` fails closed when OCI `oci-layout` metadata is invalid, when OCI `index.json` is invalid, has non-array `manifests`, or has empty manifests, when OCI manifests exist but blob evidence is missing, when OCI manifest digest references do not resolve to blob entries, when SBOM-named inputs are invalid JSON or have empty package/component evidence, and when explicit tar/compose inputs do not contain container/compose evidence. Compose strict mode now requires a `services` block with at least one service entry and at least one `image`/`build` hint inside a service block (out-of-service `image` hints do not satisfy strict routing). Explicit tar route accepts Docker-style tar markers (`manifest.json` + `repositories`) or OCI tar markers (`oci-layout` + `index.json` + `blobs/sha256/*`) and fails closed otherwise, including partial tar metadata; Docker tar strict mode additionally requires valid `manifest.json` + `repositories` JSON structure (including at least one repo/tag mapping), at least one `layer.tar` entry with manifest layer-reference resolution evidence, and manifest config-reference resolution evidence.
 
 7) image
 - Formats: .iso, .vhd, .vhdx, .vmdk, .qcow2
